--- a/indexFresh.html
+++ b/indexFresh.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Page Title</title>
+  <title>Page Title</title>
 </head>
+
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+  <style media="screen">
+    #form1 {
+      float: left;
+    }
+
+    #display_property {
+      float: right;
+      margin-right: 70px;
+    }
+  </style>
+
+
+
+  <form id="form1">
+    <p><label><span id="property"> Property title</span></label></p>
+
+    <input class="propertyTitle" type="text" placeholder="Property title" name="title" required>
+
+    <p><label><span id="property"> Property description</span></label></p>
+
+    <input class="propertyDescription" type="text" placeholder="Property description" name="title" required>
+
+
+    <p><button class=" w3-green" type="submit"> Register</button></p>
+  </form>
+
+
+  <h1 id="display_property" target="_blank">
+      <p id="property_title">title</p>
+      <p id="property_description">description</p>
+
+    </h1>
+
+  <script src="src/js/jquery-3.2.1.min.js">
+  </script>
+  <script src="src/interface.js">
+  </script>
+
 
 </body>
+
 </html>
